--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,15 +24,13 @@ jobs:
           npm install hexo-cli -g
           hexo generate
 
-      - name: Add SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan 137.175.53.140 >> ~/.ssh/known_hosts
-
-      - name: Deploy to server
-        run: |
-          rsync -avz --delete public/ root@137.175.53.140:/var/www/html
+        # 上传打包资源
+      - name: Deploy
+        uses: easingthemes/ssh-deploy@v2.0.7
         env:
-          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_KEY }}
+          ARGS: "-avz --delete"
+          SOURCE: "dist/"
+          REMOTE_HOST: 137.175.53.140
+          REMOTE_USER: root
+          TARGET: /home/note # 服务器目标路径
