--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,6 @@ jobs:
         with:
           node-version: 14
 
-      - name: check
-        run: |
-          echo ${{ secrets.DEPLOY_KEY }}
-
         # 上传打包资源
       - name: Deploy
         uses: easingthemes/ssh-deploy@v2.0.7
@@ -32,3 +28,8 @@ jobs:
           REMOTE_HOST: 137.175.53.140
           REMOTE_USER: root
           TARGET: /var/www/html
+
+      - name: check
+        run: |
+          echo /home/runner/.ssh/known_hosts
+          ls /home/runner/.ssh/
