--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519.pub
           chmod 600 ~/.ssh/id_ed25519.pub
-          ssh-keyscan 137.175.53.140 >> ~/.ssh/known_hosts
-          cat ~/.ssh/id_ed25519.pub
+          echo "137.175.53.140 ${{ secrets.DEPLOY_KEY }}" >> ~/.ssh/known_hosts
           cat ~/.ssh/known_hosts
 
       - name: Deploy to server
